# claude-cfg

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PORTABILITY.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
claude-cfg/claude_cfg/: __main__.py  cli.py  core.py  snapshot.py
claude-cfg/claude_cfg.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claude-cfg/claude_cfg/providers/: gist.py
claude-cfg/tests/: test_core.py
claude_cfg/: cli.py  config.py  core.py  paths.py  snapshot.py
claude_cfg/providers/: __init__.py  base.py  local.py  s3.py  sftp.py
tests/: test_core.py  test_portability.py  test_snapshot.py
tests/test_providers/: test_local.py
